Добавлен тест test_navigate_from_authorization_to_registration

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,8 @@
 [pytest]
-addopts = -s -v # Опция для автоматического добавления флагов
-python_files = *_tests.py test_*.py
-python_classes = Test*
-python_functions = test_*
+#addopts = -s -v # Опция для автоматического добавления флагов
+#python_files = *_tests.py test_*.py
+#python_classes = Test*
+#python_functions = test_*
 markers =
     courses: Маркировка для тестов, связанных с курсами.
     dashboard: Маркировка для тестов, связанных с рабочей панелью.
