--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   run_tests:
-    runs-on: ubuntu-20.04 
+    runs-on: ubuntu-latest 
   
     steps:
       - name: Check out repository
@@ -19,7 +19,7 @@ jobs:
       - name: Set up python v. 3.9.6
         uses: actions/setup-python@v6
         with:
-          python-version: '3.9.6'
+          python-version: '3.10'
 
       - name: instal requirements
         run: |
