--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,7 +23,7 @@ jobs:
 
       - name: instal requirements
         run: |
-          python -m install --upgrade pip
+          pip install --upgrade pip
           pip instal -r requirements.txt
           playwright install --with-deps
 
