--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,7 +39,7 @@ jobs:
           ref: gh-pages
           path: gh-pages
 
-      - name: Allure Report action fro marketplace
+      - name: Allure Report action from marketplace
         uses: simple-elf/allure-report-action@v1.7
         if: always()
         continue-on-error: true
