--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -44,6 +44,7 @@ jobs:
         if: always()
         continue-on-error: true
         with:
+          allure_report: allure-report 
           allure_results: allure_results
           allure_history: allure-history
 
