--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -46,7 +46,7 @@ jobs:
         with:
           allure_report: allure-report 
           allure_results: allure_results
-          allure_history: allure-history
+          allure_history: last-history
 
       - name: Deploy report to Github Pages
         if: always()
@@ -54,4 +54,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }} 
           publish_branch: gh-pages  
-          publish_dir: allure-history 
+          publish_dir: last-history 
