--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -44,9 +44,8 @@ jobs:
         if: always()
         continue-on-error: true
         with:
-          allure_report: allure-report 
           allure_results: allure_results
-          allure_history: last-history
+          allure_history: allure-history
 
       - name: Deploy report to Github Pages
         if: always()
@@ -54,4 +53,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }} 
           publish_branch: gh-pages  
-          publish_dir: last-history 
+          publish_dir: allure-history 
