--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -56,10 +56,16 @@ jobs:
   publish_report:
     needs: run_tests
     runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write 
 
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
+        with:
+          name: allure_result
+          path: ./allure_history
 
       - name: Deploy report to Github Pages
         if: always()
