--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -47,30 +47,10 @@ jobs:
           allure_results: allure_results
           allure_history: allure-history
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure_result
-          path: ./allure_history
-
-  publish_report:
-    needs: run_tests
-    runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write 
-
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: allure_result
-          path: ./allure_history
-
       - name: Deploy report to Github Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v4 
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }} 
           publish_branch: gh-pages  
-          publish_dir: ./allure_history 
+          publish_dir: allure_history 
